@@ -3,7 +3,8 @@ Requires
 -
 New features
 ~~~~~~~~~~~~
--
+- New "row" widget: Image With Link. Render the image inside an anchor element.
+  can be used to link to corresponding document.
 Bug fixes
 ~~~~~~~~~
 -
